[project]
name = "sko-summer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.7.1",
  "torchvision>=0.22.1",
  "opencv-python>=4.11.0.86",
  "ultralytics>=8.3.154",
  "numpy>=2.2.6",
  "scipy>=1.15.3",
  "matplotlib>=3.10.3",
]
